--- a/action.yaml
+++ b/action.yaml
@@ -23,6 +23,21 @@ runs:
         distribution: 'zulu'
         java-version: 17
 
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+
+    # Cache Gradle dependencies and build outputs to speed up future builds
+    - name: Cache Gradle and build outputs
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+          ~/.konan
+          build
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: ${{ runner.os }}-gradle-
+    
     - name: Build Web(JS) App
       shell: bash
       run: ./gradlew jsBrowserDistribution
