--- a/action.yaml
+++ b/action.yaml
@@ -7,7 +7,7 @@ branding:
 
 inputs:
   web_package_name:
-    description: 'Name of the Android project module'
+    description: 'Name of the Web project module'
     required: true
 
 outputs:
@@ -23,9 +23,6 @@ runs:
         distribution: 'zulu'
         java-version: 17
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4
-
     # Cache Gradle dependencies and build outputs to speed up future builds
     - name: Cache Gradle and build outputs
       uses: actions/cache@v4
@@ -37,10 +34,17 @@ runs:
           build
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: ${{ runner.os }}-gradle-
-    
+
     - name: Build Web(JS) App
       shell: bash
       run: ./gradlew jsBrowserDistribution
+
+    # Save web app as artifact
+    - name: Upload Web Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: web-app
+        path: './${{ inputs.web_package_name }}/build/dist/js/productionExecutable'
 
     - name: Setup Pages
       uses: actions/configure-pages@v5
